<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="12sp"
            android:id="@+id/tv_title_transaction_filters"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/string_title_transaction_filters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.chip.ChipGroup
            android:layout_gravity="center"
            android:id="@+id/cg_transaction_filters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.chip.Chip
                android:layout_marginLeft="10dp"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:id="@+id/chip_transaction_filters_chip_bearer"
                android:text="@string/string_title_transaction_filters_chip_bearer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:id="@+id/chip_transaction_filters_chip_date"
                android:layout_marginLeft="16dp"
                android:text="@string/string_title_transaction_filters_chip_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:id="@+id/chip_transaction_filters_chip_type"
                android:text="@string/string_title_transaction_filters_chip_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:id="@+id/chip_transaction_filters_chip_reset"
                android:text="@string/string_title_transaction_filters_chip_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.chip.ChipGroup>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="12sp"
            android:id="@+id/tv_title_recent_transactions"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/string_title_recent_transactions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_ma_transactions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>