<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:elevation="2dp"
    android:background="@drawable/rounded_corner_background"
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/iv_list_group_item_icon"
        android:padding="5dp"
        android:src="@drawable/icon_transaction_sample"
        android:layout_width="50dp"
        android:layout_height="50dp"/>
    <RelativeLayout
        android:gravity="center"
        android:layout_alignBottom="@id/iv_list_group_item_icon"
        android:layout_alignTop="@id/iv_list_group_item_icon"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/iv_list_group_item_icon"
        android:layout_width="wrap_content"
        android:layout_height="50dp">
        <TextView
            android:gravity="center"
            android:id="@+id/iv_list_group_item_transaction_title"
            android:textSize="16sp"
            android:text="@string/string_list_group_sample_transaction_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:gravity="center"
            android:layout_below="@id/iv_list_group_item_transaction_title"
            android:textSize="14sp"
            android:text="@string/string_list_group_sample_transaction_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <TextView
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:textSize="20sp"
        android:text="@string/string_list_group_sample_transaction_amount"
        android:layout_alignBottom="@id/iv_list_group_item_icon"
        android:layout_alignTop="@id/iv_list_group_item_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>