<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:background="@color/colorPrimary"
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
            <androidx.appcompat.widget.Toolbar
                app:layout_collapseMode="pin"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_alignParentLeft="true"
                        android:id="@+id/iv_toolbar_app_icon"
                        android:padding="8dp"
                        android:src="@android:drawable/ic_menu_directions"
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="?attr/actionBarSize"/>
                    <TextView
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/iv_toolbar_app_icon"
                        android:id="@+id/tv_toolbar_app_name"
                        android:textSize="18dp"
                        android:text="@string/app_name"
                        android:textColor="@color/colorWhite"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:id="@+id/iv_toolbar_overflow_menu_add_new_transaction_type"
                        android:layout_marginRight="16dp"
                        android:layout_alignParentRight="true"
                        android:padding="8dp"
                        android:src="@drawable/icon_message"
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="?attr/actionBarSize"/>
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>
            <LinearLayout
                android:paddingBottom="0dp"
                app:layout_collapseMode="parallax"
                android:layout_marginTop="200dp"
                android:id="@+id/ll_main_header"
                android:orientation="horizontal"
                android:weightSum="9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:weightSum="10"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_label_ma_total"
                        android:textSize="14sp"
                        android:layout_weight="5"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"
                        android:text="@string/string_title_total"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_marginTop="5dp"
                        android:id="@+id/tv_value_ma_total"
                        android:textSize="18sp"
                        android:layout_weight="5"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"
                        android:text="@string/string_value_sample_total"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:weightSum="10"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_label_ma_debits"
                        android:textSize="14sp"
                        android:layout_weight="5"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"
                        android:text="@string/string_title_debits"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_marginTop="5dp"
                        android:id="@+id/tv_value_ma_debits"
                        android:textSize="18sp"
                        android:layout_weight="5"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"
                        android:text="@string/string_value_sample_debits"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:weightSum="10"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_label_ma_credits"
                        android:textSize="14sp"
                        android:layout_weight="5"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"
                        android:text="@string/string_title_credits"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_marginTop="5dp"
                        android:id="@+id/tv_value_ma_credits"
                        android:textSize="18sp"
                        android:layout_weight="5"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"
                        android:text="@string/string_value_sample_credits"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <include layout="@layout/layout_main_include"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>